# Sentence-Translator

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  metadata.yaml  modelCreator.py  modelOutput.py  pyproject.toml  requirements.txt
StreamlitApp/: app.py
config/: data_validation.yaml  model_training.yaml
notebooks/: Sentence_Translator.ipynb
saved_model/: hi_vocab.pth
saved_model copy/: en_vocab.pth
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_training.py  prediction.py
src/constants/: __init__.py
src/data_access/: data_fetcher.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipelines/: Data_Ingestion_Pipeline.py  Data_Transformation_Pipeline.py  Data_Validation_Pipeline.py  Model_Training_Pipeline.py  Prediction_Pipeline.py
src/tests/: test_prediction_fix.py  test_sentence_translator.py
src/utils/: asyncHandler.py  main_utils.py  model_utils.py
temp/: Translator.ipynb  createModel.py
templates/: index.html
