[project]
name = "sentence-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "from-root>=1.3.0",
    "fsspec>=2026.2.0",
    "huggingface-hub>=1.4.1",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=23.0.1",
]
