[project]
name = "sentence-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.1",
    "fastapi>=0.129.0",
    "from-root>=1.3.0",
    "fsspec>=2026.2.0",
    "huggingface-hub>=1.4.1",
    "nltk>=3.9.2",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=23.0.1",
    "slowapi>=0.1.9",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]
